<?xml version="1.0" encoding="UTF-8"?>

<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.jvoicexml</groupId>
  <artifactId>jsapi</artifactId>
  <version>0.6.5</version>
  <packaging>pom</packaging>

  <modules>
    <module>javax.speech</module>
    <module>org.jvoicexml.jsapi2</module>
    <module>org.jvoicexml.jsapi2.freetts</module>
    <module>org.jvoicexml.jsapi2.sphinx4</module>
    <module>org.jvoicexml.jsapi2.demo.helloworld</module>
    <module>org.jvoicexml.jsapi2.demo.input</module>
    <module>org.jvoicexml.jsapi2.demo.rtp</module>
    <module>org.jvoicexml.jsapi2.sapi</module>
<!--
    <module>org.jvoicexml.jsapi2.mac</module>
    <module>org.jvoicexml.jsapi2.sapi.jsapi2speechserverbridge</module>
-->
  </modules>

  <name>jsapi</name>
  <description/>
  <url>https//github.com/umjammer/jsapi</url>
  <scm>
    <url>https//github.com/umjammer/jsapi</url>
  </scm>
  <issueManagement>
    <system>https//github.com/umjammer/jsapi/issues</system>
  </issueManagement>

  <properties>
    <freetts.groupId>com.github.umjammer.FreeTTS</freetts.groupId>
    <freetts.version>1.2.5</freetts.version>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <release>17</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>com.github.umjammer</groupId>
        <artifactId>vavi-commons</artifactId>
        <version>1.1.10</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
